# binex

./: .gitignore  meson.build  meson_options.txt
.github/workflows/: build.yaml
include/binex/: basic_window.hpp
src/: main.cpp  main.hpp  meson.build
subprojects/: .gitignore  lak.wrap
