# testing options

option('lak_enable_tests',
	type: 'boolean',
	value: true,
	yield: true,
)

# windowing options

option('lak_enable_windowing',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_run_windowing_tests',
	type: 'boolean',
	value: false,
	yield: true,
)

option('sdl2_from_source',
	type: 'boolean',
	value: true,
	yield: true,
)

option('lak_backend',
  type: 'combo',
  choices: [
    'win32',
    'xlib',
    'xcb',
    'sdl',
    'qt',
  ],
  value: 'sdl',
  yield: true,
)

# llvm options

option('lak_enable_llvm',
  type: 'boolean',
  value: false,
  yield: true,
)

# lmdb options

option('lak_enable_lmdb',
	type: 'boolean',
	value: false,
	yield: true,
)

# lua options

option('lak_enable_lua',
	type: 'boolean',
	value: false,
	yield: true,
)

# glm options

option('lak_enable_glm',
	type: 'boolean',
	value: true,
	yield: true,
)

# dear imgui options

option('lak_enable_imgui',
	type: 'boolean',
	value: true,
	yield: true,
)
